<resources>
    <string name="app_name">Client Planner</string>

    <string name="rec_title">В начало</string>

    <!--<string name="navDraw_1">Главная</string>-->
    <!--<string name="navDraw_2">Календарь</string>-->
    <!--<string name="navDraw_3">Архив</string>-->
    <!--<string name="navDraw_4">Настройки</string>-->
    <!--<string name="navDraw_5">О приложении</string>-->

    <string name="change_language">Изменить язык</string>
    <string name="menu_data">Данные</string>
    <string name="title_activity_record">RecordActivity</string>

    <string name="start_record">Сделать запись</string>
    <string name="start_record_description">Выбор клиента, даты, услуги \n Отправка сообщения</string>
    <string name="calendar">Календарь</string>
    <string name="start_calendar_description">Просмотр и удаление записей</string>
    <string name="services">Услуги</string>
    <string name="service">Услуга</string>
    <string name="start_procedure_description">Просмотр и редактирование услуг</string>

    <string-array name="fragment_titles">
        <item>Клиенты</item>
        <item>Дата</item>
        <item>Услуги</item>
        <item>Завершение</item>
    </string-array>

    <string name="search_hint">поиск</string>
    <string name="empty_list_msg">Нет результов</string>

    <string name="add">Добавить</string>

    <string name="contacts">Контакты</string>
    <string name="history">История</string>

    <string name="choose_title">Вы выбрали</string>

    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>

    <string name="sms">СМС</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="viber" translatable="false">Viber</string>

    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
    <string name="cancel">Отмена</string>

    <string name="phone_choose">Выберите телефон</string>
    <string name="email_choose">Выберите адрес эд.почты</string>

    <string name="unknown">неизвестно</string>
    <string name="no_notes">примечаний нет</string>

    <string name="add_proc_title">Новая услуга</string>
    <string name="price">Цена</string>
    <string name="note">Примечание</string>

    <string name="contact_inf">Информация о контакте</string>
    <string name="procedure_inf">Информация об услуге</string>

    <string-array name="months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <string name="title_activity_procedure">ProcedureActivity</string>

    <string name="choose_msg_type">Выберите способ оповещения</string>

    <string-array name="msg_types">
        <item>SMS</item>
        <item>Email</item>
        <item>WhatsApp</item>
        <item>Viber</item>
    </string-array>

    <string name="end_btn">Завершить запись</string>

    <string name="send_msg_title">Запись успешно завершена и добавлена в календарь</string>
    <string name="send_msg_question">Желаете оповестить клиента?</string>
    <string name="end_error">Ошибка завершения записи!</string>

    <string name="send">Отправить</string>

    <string name="date">дата</string>
    <string name="time">время</string>
    <string name="choose_date">Выберите дату</string>
    <string name="choose_time">Выберите время</string>
    <string name="from">с</string>
    <string name="to">по</string>

    <string name="no_records">Ближайших записей нет</string>
    <string name="visits_number">Количество посещений</string>
    <string name="no_visits">Посещений не было</string>

    <string name="info">Информация</string>

    <string name="today">Сегодня</string>
    <string name="one_day">1 день</string>
    <string name="three_days">3 дня</string>
    <string name="week">Неделя</string>

    <string name="name_">Имя:</string>
    <string name="date_">Дата:</string>
    <string name="time_">Время:</string>
    <string name="service_">Услуга:</string>
    <string name="price_">Цена:</string>
    <string name="note_">Примечание:</string>

    <string name="wrong_end_time">Время завершения задано неверно</string>
    <string name="wrong_start_time">Время начала задано неверно</string>
    <string name="appointment_already_exist">Запись на это время уже существует</string>

    <string name="incorrect_record">записан неверно</string>

    <string name="select_service">Выберите услугу</string>
    <string name="your_choice">Ваш выбор</string>
    <string name="change">Изменить</string>
    <string name="service_changed">Услуга изменена</string>
    <string name="service_added">Услуга добавлена</string>

    <string name="record_complete">Запись успешно завершена</string>
    <string name="hello">Здравствуйте,</string>
    <string name="bye">До свидания!</string>
    <string name="you_appointment">Вы записаны на</string>

    <string name="new_service">Новая услуга</string>
    <string name="service_name">Название</string>
    <string name="color">Цвет</string>

    <string name="completion_record">Завершение записи</string>

    <string name="ok">Завершение записи</string>
    <string name="complete">Завершить</string>
    <string name="message">Сообщение</string>

    <string name="notified_by">Оповещен через</string>
    <string name="not_notified">Не оповещен</string>

    <string name="delete">Удалить</string>

</resources>
