<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="@dimen/padding_right">

    <TextView
        android:id="@+id/add_proc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/name_viewpager"
        android:text="@string/new_service"
        android:textStyle="bold"
        android:textColor="@color/color_black" />


    <TextView
        android:id="@+id/proc_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_top"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/header_comment_add_proc"
        android:textColor="@color/color_black_light"
        android:text="@string/service_name" />

    <EditText
        android:id="@+id/input_proc_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:textColor="@color/color_black_light"
        android:inputType="textAutoCorrect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_top"
        android:weightSum="3">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">
    <TextView
        android:id="@+id/proc_price_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textColor="@color/color_black_light"
        android:textSize="@dimen/header_comment_add_proc"
        android:text="@string/price" />

    <EditText
        android:id="@+id/input_proc_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:textColor="@color/color_black_light"
        android:inputType="number" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
        <TextView
            android:id="@+id/proc_color_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/header_comment_add_proc"
            android:textColor="@color/color_black_light"
            android:text="@string/color" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spin_proc_color">
        </Spinner>
    </LinearLayout>
</LinearLayout>

    <TextView
        android:id="@+id/proc_note_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/header_comment_add_proc"
        android:textColor="@color/color_black_light"
        android:text="@string/note" />

    <EditText
        android:id="@+id/input_proc_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:textColor="@color/color_black_light"
        android:inputType="textAutoCorrect" />

</LinearLayout>