<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/contact_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/name_viewpager"
        android:text="@string/contact_inf"
        android:textStyle="bold"
        android:textColor="@color/color_black" />


    <TextView
        android:id="@+id/contact_info_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_top"
        android:fontFamily="sans-serif"
        android:textColor="@color/color_black_light"
        android:textSize="@dimen/header_comment_add_proc"
        android:textStyle="bold"
        android:text="@string/name" />

    <TextView
        android:id="@+id/contact_info_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:fontFamily="sans-serif"
        android:textColor="@color/color_black_light"
        android:singleLine="false"/>

    <TextView
        android:id="@+id/contact_phone_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_betw_name"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/header_comment_add_proc"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/color_black_light" />

    <TextView
        android:id="@+id/contact_info_phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:fontFamily="sans-serif"
        android:singleLine="false"
        android:autoLink="phone"/>

    <TextView
        android:id="@+id/contact_info_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_betw_name"
        android:fontFamily="sans-serif"
        android:textColor="@color/color_black_light"
        android:textSize="@dimen/header_comment_add_proc"
        android:textStyle="bold"
        android:text="@string/email" />

    <TextView
        android:id="@+id/contact_info_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_edit"
        android:fontFamily="sans-serif"
        android:textColor="@color/color_black_light"
        android:singleLine="false"
        android:autoLink="email"/>

</LinearLayout>